# airflow-providers-wherobots

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: README.md
.github/workflows/: on_pr.yaml  pypi-publish.yaml  run_tests.yaml
airflow_providers_wherobots/hooks/: base.py  rest_api.py  sql.py  wherobots.py  wherobots_sql.py
airflow_providers_wherobots/operators/: __init__.py  run.py  sql.py
airflow_providers_wherobots/wherobots/: models.py
tests/: conftest.py
tests/helpers/: __init__.py
tests/hooks/: test_rest_api.py  test_sql.py  test_wherobots_sql.py
tests/integration/: conftest.py
tests/integration/operator/: test_run.py
tests/integration_tests/: conftest.py
tests/integration_tests/operator/: test_run.py  test_sql.py
tests/integration_tests/operators/: test_run.py  test_sql.py
tests/operator/: sql_smoke.py  test_run.py  test_sql.py
tests/unit/helpers/: __init__.py
tests/unit/hooks/: test_rest_api.py
tests/unit/operator/: test_run.py
tests/unit/wherobots/: test_models.py
tests/unit_tests/helpers/: __init__.py  model_factories.py
tests/unit_tests/hooks/: test_base.py  test_rest_api.py  test_sql.py
tests/unit_tests/operator/: sql_smoke.py  test_run.py  test_sql.py
tests/unit_tests/operators/: test_helpers.py  test_run.py  test_sql.py
tests/unit_tests/wherobots/: test_models.py
