[tool.poetry]
name = "airflow-providers-wherobots"
version = "1.2.0"
description = "Airflow extension for communicating with Wherobots Cloud"
authors = ["zongsi.zhang <zongsi@wherobots.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
wherobots-python-dbapi = "^0.10.1"
pydantic = "^2.3"

[tool.poetry.group.dev.dependencies]
apache-airflow = "^2.7.0"
pytest = "^8.1.1"
requests-mock = "^1.12.1"
aioresponses = "^0.7.4"
pytest-asyncio = "^0.24.0"
responses = "^0.25.3"
pytest-mock = "^3.14.0"
polyfactory = "^2.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
